fixed alignement of images.

--- a/src/app/pages/project/detail/project-detail.scss
+++ b/src/app/pages/project/detail/project-detail.scss
@@ -1,3 +1,11 @@
 .project-image {
   margin-bottom: $spacing;
+
+  &:nth-child(odd) {
+    float: left;
+  }
+
+  &:nth-child(even) {
+    float: right;
+  }
 }
